--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-netlify",
   "version": "1.0.0",
-  "description": "Template for Angular + Node.js project prepared for netlify",
+  "description": "Boilerplate for Angular + Node.js project prepared for netlify",
   "main": "server.js",
   "scripts": {
     "build": "cd theme-customization && npm install && ng build --prod && cd ../ && netlify-lambda build express",
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/orlyohreally/angular-node.js-netlify-boilerplate#readme",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "netlify-lambda": "^2.0.1",
     "nodemon": "^2.0.4",
