--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/orlyohreally/angular-node.js-netlify-boilerplate#readme",
   "license": "MIT",
   "dependencies": {
+    "@angular/cli": "~10.0.0",
     "express": "^4.17.1",
     "netlify-lambda": "^2.0.1",
     "nodemon": "^2.0.4",
