moved redirect to config file

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
   command = "CI='' npm run build"
   publish = "dist/theme-customization"
   functions = "functions"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+ 
